{
  "version": 4,
  "terraform_version": "1.9.1",
  "serial": 174,
  "lineage": "748e2001-7d1f-40d5-f06b-cc12690c2247",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:906273274991:security-group/sg-0c48bb46a8229d95a",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c48bb46a8229d95a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "906273274991",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "AppStackID": "testApp01",
              "Owner": "Ben",
              "OwnerEmail": "iamben84@gmail.com"
            },
            "vpc_id": "vpc-0594176384ecfe77a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.testApp01-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0929c079492b6600a",
            "arn": "arn:aws:ec2:eu-west-1:906273274991:elastic-ip/eipalloc-0929c079492b6600a",
            "domain": "vpc",
            "id": "eipalloc-0929c079492b6600a",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-54-170-52-225.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.170.52.225",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "AppStackID": "testApp01",
              "Owner": "Ben",
              "OwnerEmail": "iamben84@gmail.com"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-000090d0d256374f8",
            "arn": "arn:aws:ec2:eu-west-1:906273274991:elastic-ip/eipalloc-000090d0d256374f8",
            "domain": "vpc",
            "id": "eipalloc-000090d0d256374f8",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-46-137-190-148.eu-west-1.compute.amazonaws.com",
            "public_ip": "46.137.190.148",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "AppStackID": "testApp01",
              "Owner": "Ben",
              "OwnerEmail": "iamben84@gmail.com"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-048f202f7890991ce",
            "arn": "arn:aws:ec2:eu-west-1:906273274991:elastic-ip/eipalloc-048f202f7890991ce",
            "domain": "vpc",
            "id": "eipalloc-048f202f7890991ce",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-34-253-110-82.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.253.110.82",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "AppStackID": "testApp01",
              "Owner": "Ben",
              "OwnerEmail": "iamben84@gmail.com"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:906273274991:internet-gateway/igw-046e152deb550b6b9",
            "id": "igw-046e152deb550b6b9",
            "owner_id": "906273274991",
            "tags_all": {
              "AppStackID": "testApp01",
              "Owner": "Ben",
              "OwnerEmail": "iamben84@gmail.com"
            },
            "vpc_id": "vpc-0594176384ecfe77a"
          },
          "dependencies": [
            "aws_vpc.testApp01-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ecs_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:906273274991:loadbalancer/app/ecs-lb/6a9d413f1fd0edde",
            "arn_suffix": "app/ecs-lb/6a9d413f1fd0edde",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecs-lb-1900700893.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:906273274991:loadbalancer/app/ecs-lb/6a9d413f1fd0edde",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01e8c55b1a1e7ab64"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04e869c1db91655a2"
              },
              {
                "subnet_id": "subnet-06450fd06929c67a7"
              },
              {
                "subnet_id": "subnet-0db2bdb84e5012452"
              }
            ],
            "subnets": [
              "subnet-04e869c1db91655a2",
              "subnet-06450fd06929c67a7",
              "subnet-0db2bdb84e5012452"
            ],
            "tags_all": {
              "AppStackID": "testApp01",
              "Owner": "Ben",
              "OwnerEmail": "iamben84@gmail.com"
            },
            "vpc_id": "vpc-0594176384ecfe77a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_subnet.public",
            "aws_vpc.testApp01-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_default_listener_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:906273274991:listener/app/ecs-lb/6a9d413f1fd0edde/1b51f066addb72ca",
            "certificate_arn": "arn:aws:acm:eu-west-1:906273274991:certificate/06df78d9-73ab-46c7-9f28-e1107b382878",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Access denied",
                    "status_code": "403"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:906273274991:listener/app/ecs-lb/6a9d413f1fd0edde/1b51f066addb72ca",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:906273274991:loadbalancer/app/ecs-lb/6a9d413f1fd0edde",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-Ext-2018-06",
            "tags": null,
            "tags_all": {
              "AppStackID": "testApp01",
              "Owner": "Ben",
              "OwnerEmail": "iamben84@gmail.com"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.wildcard-lb",
            "aws_lb.ecs_lb",
            "aws_security_group.lb_sg",
            "aws_subnet.public",
            "aws_vpc.testApp01-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "https_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:906273274991:targetgroup/testApp01-TargetGroup-dev/4ac33bce592a109a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:906273274991:listener-rule/app/ecs-lb/6a9d413f1fd0edde/1b51f066addb72ca/04f62e4ab19ad2d3",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "backend.bengreen.xyz"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:906273274991:listener-rule/app/ecs-lb/6a9d413f1fd0edde/1b51f066addb72ca/04f62e4ab19ad2d3",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:906273274991:listener/app/ecs-lb/6a9d413f1fd0edde/1b51f066addb72ca",
            "priority": 1,
            "tags": null,
            "tags_all": {
              "AppStackID": "testApp01",
              "Owner": "Ben",
              "OwnerEmail": "iamben84@gmail.com"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.wildcard-lb",
            "aws_lb.ecs_lb",
            "aws_lb_listener.alb_default_listener_https",
            "aws_lb_target_group.service_target_group",
            "aws_security_group.lb_sg",
            "aws_subnet.public",
            "aws_vpc.testApp01-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "service_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:906273274991:targetgroup/testApp01-TargetGroup-dev/4ac33bce592a109a",
            "arn_suffix": "targetgroup/testApp01-TargetGroup-dev/4ac33bce592a109a",
            "deregistration_delay": "5",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:906273274991:targetgroup/testApp01-TargetGroup-dev/4ac33bce592a109a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "testApp01-TargetGroup-dev",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "AppStackID": "testApp01",
              "Owner": "Ben",
              "OwnerEmail": "iamben84@gmail.com"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0594176384ecfe77a"
          },
          "dependencies": [
            "aws_lb.ecs_lb",
            "aws_security_group.lb_sg",
            "aws_subnet.public",
            "aws_vpc.testApp01-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0929c079492b6600a",
            "association_id": "eipassoc-04d3d60f1f729b599",
            "connectivity_type": "public",
            "id": "nat-05ac9ede8ed6465dd",
            "network_interface_id": "eni-0677b76c2d86b3142",
            "private_ip": "10.0.63.3",
            "public_ip": "54.170.52.225",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0db2bdb84e5012452",
            "tags": {
              "Name": "testApp01_NATGateway_0_dev"
            },
            "tags_all": {
              "AppStackID": "testApp01",
              "Name": "testApp01_NATGateway_0_dev",
              "Owner": "Ben",
              "OwnerEmail": "iamben84@gmail.com"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_subnet.public",
            "aws_vpc.testApp01-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-000090d0d256374f8",
            "association_id": "eipassoc-0d7612ff9f036dced",
            "connectivity_type": "public",
            "id": "nat-0a006d7bff9fc6574",
            "network_interface_id": "eni-0263bcaf4761ac84c",
            "private_ip": "10.0.74.169",
            "public_ip": "46.137.190.148",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04e869c1db91655a2",
            "tags": {
              "Name": "testApp01_NATGateway_1_dev"
            },
            "tags_all": {
              "AppStackID": "testApp01",
              "Name": "testApp01_NATGateway_1_dev",
              "Owner": "Ben",
              "OwnerEmail": "iamben84@gmail.com"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_subnet.public",
            "aws_vpc.testApp01-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-048f202f7890991ce",
            "association_id": "eipassoc-00e7acf2dbb0c2355",
            "connectivity_type": "public",
            "id": "nat-0690c3080a7b58a93",
            "network_interface_id": "eni-0de4bdedbbad9e1f5",
            "private_ip": "10.0.90.94",
            "public_ip": "34.253.110.82",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06450fd06929c67a7",
            "tags": {
              "Name": "testApp01_NATGateway_2_dev"
            },
            "tags_all": {
              "AppStackID": "testApp01",
              "Name": "testApp01_NATGateway_2_dev",
              "Owner": "Ben",
              "OwnerEmail": "iamben84@gmail.com"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_subnet.public",
            "aws_vpc.testApp01-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet-access-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:906273274991:route-table/rtb-0cd81af8ac65f4f49",
            "id": "rtb-0cd81af8ac65f4f49",
            "owner_id": "906273274991",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-046e152deb550b6b9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "AppStackID": "testApp01",
              "Owner": "Ben",
              "OwnerEmail": "iamben84@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0594176384ecfe77a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet-gw",
            "aws_vpc.testApp01-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03bbde36f389434d5",
            "route_table_id": "rtb-0cd81af8ac65f4f49",
            "subnet_id": "subnet-0db2bdb84e5012452"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gw",
            "aws_route_table.internet-access-rt",
            "aws_subnet.public",
            "aws_vpc.testApp01-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016e85b719e6695de",
            "route_table_id": "rtb-0cd81af8ac65f4f49",
            "subnet_id": "subnet-04e869c1db91655a2"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gw",
            "aws_route_table.internet-access-rt",
            "aws_subnet.public",
            "aws_vpc.testApp01-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c64c77889022cce3",
            "route_table_id": "rtb-0cd81af8ac65f4f49",
            "subnet_id": "subnet-06450fd06929c67a7"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gw",
            "aws_route_table.internet-access-rt",
            "aws_subnet.public",
            "aws_vpc.testApp01-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:906273274991:security-group/sg-0a281f3d64f41fdde",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a281f3d64f41fdde",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ingress traffic from ALB to ECS",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01e8c55b1a1e7ab64"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "ecs-sg20240703202237680700000005",
            "name_prefix": "ecs-sg",
            "owner_id": "906273274991",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "AppStackID": "testApp01",
              "Owner": "Ben",
              "OwnerEmail": "iamben84@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0594176384ecfe77a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_vpc.testApp01-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:906273274991:security-group/sg-01e8c55b1a1e7ab64",
            "description": "Security group for load balancer",
            "egress": [],
            "id": "sg-01e8c55b1a1e7ab64",
            "ingress": [],
            "name": "lb-sg",
            "name_prefix": "",
            "owner_id": "906273274991",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "AppStackID": "testApp01",
              "Owner": "Ben",
              "OwnerEmail": "iamben84@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0594176384ecfe77a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.testApp01-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_cloudfront_https_ingress_only",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow HTTPS access only from CloudFront CIDR blocks",
            "from_port": 443,
            "id": "sgrule-2804138692",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [
              "pl-4fa04526"
            ],
            "protocol": "tcp",
            "security_group_id": "sg-01e8c55b1a1e7ab64",
            "security_group_rule_id": "sgr-0831145d2fb5260ad",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_vpc.testApp01-vpc",
            "data.aws_ec2_managed_prefix_list.cloudfront"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_cloudfront_ingress_temp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Temp allow of everything",
            "from_port": 443,
            "id": "sgrule-803045949",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01e8c55b1a1e7ab64",
            "security_group_rule_id": "sgr-0726716be2d880110",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_vpc.testApp01-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:906273274991:subnet/subnet-0a9f778b8c0dc0921",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9f778b8c0dc0921",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "906273274991",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet 1"
            },
            "tags_all": {
              "AppStackID": "testApp01",
              "Name": "PrivateSubnet 1",
              "Owner": "Ben",
              "OwnerEmail": "iamben84@gmail.com"
            },
            "vpc_id": "vpc-0594176384ecfe77a"
          },
          "dependencies": [
            "aws_vpc.testApp01-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:906273274991:subnet/subnet-0543a924273051fd6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0543a924273051fd6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "906273274991",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet 2"
            },
            "tags_all": {
              "AppStackID": "testApp01",
              "Name": "PrivateSubnet 2",
              "Owner": "Ben",
              "OwnerEmail": "iamben84@gmail.com"
            },
            "vpc_id": "vpc-0594176384ecfe77a"
          },
          "dependencies": [
            "aws_vpc.testApp01-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:906273274991:subnet/subnet-0bd05d832c02712c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd05d832c02712c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "906273274991",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet 3"
            },
            "tags_all": {
              "AppStackID": "testApp01",
              "Name": "PrivateSubnet 3",
              "Owner": "Ben",
              "OwnerEmail": "iamben84@gmail.com"
            },
            "vpc_id": "vpc-0594176384ecfe77a"
          },
          "dependencies": [
            "aws_vpc.testApp01-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:906273274991:subnet/subnet-0db2bdb84e5012452",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db2bdb84e5012452",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "906273274991",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet 1"
            },
            "tags_all": {
              "AppStackID": "testApp01",
              "Name": "PublicSubnet 1",
              "Owner": "Ben",
              "OwnerEmail": "iamben84@gmail.com"
            },
            "vpc_id": "vpc-0594176384ecfe77a"
          },
          "dependencies": [
            "aws_vpc.testApp01-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:906273274991:subnet/subnet-04e869c1db91655a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e869c1db91655a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "906273274991",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet 2"
            },
            "tags_all": {
              "AppStackID": "testApp01",
              "Name": "PublicSubnet 2",
              "Owner": "Ben",
              "OwnerEmail": "iamben84@gmail.com"
            },
            "vpc_id": "vpc-0594176384ecfe77a"
          },
          "dependencies": [
            "aws_vpc.testApp01-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:906273274991:subnet/subnet-06450fd06929c67a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06450fd06929c67a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "906273274991",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet 3"
            },
            "tags_all": {
              "AppStackID": "testApp01",
              "Name": "PublicSubnet 3",
              "Owner": "Ben",
              "OwnerEmail": "iamben84@gmail.com"
            },
            "vpc_id": "vpc-0594176384ecfe77a"
          },
          "dependencies": [
            "aws_vpc.testApp01-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "testApp01-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:906273274991:vpc/vpc-0594176384ecfe77a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-099be5df365fe3298",
            "default_route_table_id": "rtb-001b9ddd0e320a264",
            "default_security_group_id": "sg-0c48bb46a8229d95a",
            "dhcp_options_id": "dopt-d14310b7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0594176384ecfe77a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-001b9ddd0e320a264",
            "owner_id": "906273274991",
            "tags_all": {
              "AppStackID": "testApp01",
              "Owner": "Ben",
              "OwnerEmail": "iamben84@gmail.com"
            }
          }
        }
      ]
    }
  ]
}